src/test/deca/context/invalid/object/badNew2.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}


class B
{
  X x = new Object();
  Y y = new Y();
  float a;

}
